# reach-chat

./: Dockerfile  README - cópia.md  README.md  app.json  db.sqlite3  eas.json  manage.py  package-lock.json  package.json  pyproject.toml
chatting/: admin.py  consumers.py  models.py  urls.py  views.py
chatting/migrations/: 0001_initial.py  0002_message_image.py  0003_message_likes_alter_message_image.py  0004_messagesliked.py
chatting/templates/chatting/: message_list.html
projeto_chat/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
projeto_chat/static/: main.js  style.css
projeto_chat/templates/: base.html  index.html
projeto_chat/templates/auth/: login.html  signup.html
