[tool.poetry]
name = "projeto_chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
channels = "^4.1.0"
daphne = "^4.1.2"
channels-redis = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
